svg sprite setup

--- a/app/index.html
+++ b/app/index.html
@@ -132,28 +132,44 @@
           <div class="row">
             <div>
               <div class="advantages">
-                <div class="advantages__shape"></div>
+                <div class="advantages__shape">
+                  <svg class="advantages__icon">
+                    <use xlink:href="#services__dolar"></use>
+                  </svg>
+                </div>
                 <div class="advantages__title">Best prices</div>
                 <p class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum maxime neque!</p>
               </div>
             </div>
             <div>
               <div class="advantages">
-                <div class="advantages__shape"></div>
+                <div class="advantages__shape">
+                  <svg class="advantages__icon">
+                    <use xlink:href="#services__car"></use>
+                  </svg>
+                </div>
                 <div class="advantages__title">Car range</div>
                 <p class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum maxime neque!</p>
               </div>
             </div>
             <div>
               <div class="advantages">
-                <div class="advantages__shape"></div>
+                <div class="advantages__shape">
+                  <svg class="advantages__icon">
+                    <use xlink:href="#services__shield"></use>
+                  </svg>
+                </div>
                 <div class="advantages__title">Assistance</div>
                 <p class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum maxime neque!</p>
               </div>
             </div>
             <div>
               <div class="advantages">
-                <div class="advantages__shape"></div>
+                <div class="advantages__shape">
+                  <svg class="advantages__icon">
+                    <use xlink:href="#services__globe"></use>
+                  </svg>
+                </div>
                 <div class="advantages__title">We go global</div>
                 <p class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum maxime neque!</p>
               </div>
