Completed icons and medium view

--- a/app/index.html
+++ b/app/index.html
@@ -24,33 +24,24 @@
       <div class="hero__form-container">
         <form class="form">
           <h2 class="form__title">Start your trip</h2>
-
           <div class="form__section">
             <h3 class="form__subtitle">Pick-up location</h3>
-
             <input type="text" class="form__text-input" autocomplete="off" placeholder="City, airport, hotel, etc">
-
             <div class="form__datetime">
               <input type="date" class="form__date-input" value="2021-09-01">
-
               <input type="time" class="form__time-input" value="10:00">
             </div>
           </div>
-
           <div class="form__section form__section--second">
             <h3 class="form__subtitle">Drop-off location</h3>
-
             <input type="checkbox" class="form__checkbox" id="sameDropOff">
             <label class="form__label" for="sameDropOff">Same as pick-up location</label>
-
             <input type="text" class="form__text-input" autocomplete="off" placeholder="City, airport, hotel, etc">
-
             <div class="form__datetime">
               <input type="date" class="form__date-input" value="2021-09-01">
               <input type="time" class="form__time-input" value="10:00">
             </div>
           </div>
-
           <input class="btn btn--fw" type="submit" value="Choose a car">
         </form>
       </div>
@@ -59,8 +50,18 @@
     <div class="info-bar">
       <div class="wrapper">
         <p class="info-bar__call">Call our reservation office</p>
-        <p class="info-bar__phone">+48 601 555 444</p>
-        <p class="info-bar__hours">Mon - Fri 9:00 - 17:00</p>
+        <p class="info-bar__phone">
+          <svg class="info-bar__icon">
+            <use xlink:href="#info-bar__smartphone"></use>
+          </svg>
+          +48 601 555 444
+        </p>
+        <p class="info-bar__hours">
+          <svg class="info-bar__icon">
+            <use xlink:href="#info-bar__time"></use>
+          </svg>
+          Mon - Fri 9:00 - 17:00
+        </p>
       </div>
     </div>
   </header>
@@ -80,7 +81,12 @@
             </picture>
 
             <div class="card__text-content">
-              <p class="card__tier">Class Premium</p>
+              <p class="card__tier">
+                <svg class="card__icon">
+                  <use xlink:href="#card__diamond"></use>
+                </svg>
+                Class Premium
+              </p>
               <h3 class="card__model">Ford Kuga Pro</h3>
               <ul class="card__features">
                 <li>Hatchback</li>
@@ -104,7 +110,12 @@
             </picture>
 
             <div class="card__text-content">
-              <p class="card__tier">Class Economy</p>
+              <p class="card__tier">
+                <svg class="card__icon">
+                  <use xlink:href="#card__coin"></use>
+                </svg>
+                Class Economy
+              </p>
               <h3 class="card__model">Range Rover</h3>
               <ul class="card__features">
                 <li>Sedan</li>
@@ -125,11 +136,11 @@
 
   <section id="ourServices">
     <div class="services">
-      <div class="wrapper">
+      <div class="wrapper wrapper--extra-padding">
         <h2 class="services__heading">Services</h2>
         <h3 class="services__slogan">W<span>ha</span>t sets as appart</h3>
         <div class="services__content">
-          <div class="row">
+          <div class="row row--2-col-md">
             <div>
               <div class="advantages">
                 <div class="advantages__shape">
@@ -185,8 +196,8 @@
       <div class="footer__overlay"></div>
       <div class="footer__content">
         <div class="wrapper">
-          <div class="row">
-            <div>
+          <div class="row row--2-col-sm">
+            <div class="row__sm-11">
               <h2 class="footer__logo">Rent<span>Car</span></h2>
               <p class="footer__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel ligula id eros porta tempus. Proin a quam ligula. Curabitur.</p>
             </div>
@@ -208,18 +219,37 @@
                 <li>Contact form</li>
               </ul>
             </div>
-            <div>
+            <div class="row__sm-12">
               <h3 class="footer__heading">Our Headquarter</h3>
-              <p class="footer__address">Fake St. Radom<br>26-604, Poland</p>
-              <p class="footer__email">info@domain.com</p>
-              <p class="footer__phone">+48 601 555 444</p>
+              <p class="footer__address">
+                <svg class="footer__icon">
+                  <use xlink:href="#footer__maps"></use>
+                </svg>
+                Fake St. Radom<br><span>26-604, Poland</span>
+              </p>
+              <p class="footer__email">
+                <svg class="footer__icon">
+                  <use xlink:href="#footer__email"></use>
+                </svg>
+                info@domain.com
+              </p>
+              <p class="footer__phone">
+                <svg class="footer__icon">
+                  <use xlink:href="#footer__phone"></use>
+                </svg>
+                +48 601 555 444
+              </p>
             </div>
           </div>
           <div class="row">
             <div>
               <div class="footer__newsletter">
                 <input type="email" class="footer__input" value="Subscribe to our newsletter">
-                <span class="footer__plane"></span>
+                <span class="footer__plane">
+                  <svg>
+                    <use xlink:href="#footer__plane"></use>
+                  </svg>
+                </span>
               </div>
             </div>
             <div>
