Completed styling the site

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
       <nav class="site-header__menu">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a class="active" href="#">Home</a></li>
           <li><a href="#">Fleet</a></li>
           <li><a href="#">Pricing</a></li>
           <li><a href="#">Locations</a></li>
@@ -34,10 +34,10 @@
   <div class="hero">
 
     <picture>
-      <source srcset="assets/images/hero--large-low-dpi-o.png 1920w, assets/images/hero--large-hi-dpi-o.png 3840w" media="(min-width: 1380px)">
-      <source srcset="assets/images/hero--medium-low-dpi-o.png 1380w, assets/images/hero--medium-hi-dpi-o.png 2760w" media="(min-width: 980px)">
-      <source srcset="assets/images/hero--small-low-dpi-o.png 980w, assets/images/hero--small-hi-dpi-o.png 1960w" media="(min-width: 640px)">
-      <img srcset="assets/images/hero--smallest-low-dpi.png 640w, assets/images/hero--smallest-hi-dpi-o.png 1280w" alt="White BMW Car" class="hero__image">
+      <source srcset="assets/images/hero--large-low-dpi.png 1920w, assets/images/hero--large-hi-dpi.png 3840w" media="(min-width: 1380px)">
+      <source srcset="assets/images/hero--medium-low-dpi.png 1380w, assets/images/hero--medium-hi-dpi.png 2760w" media="(min-width: 980px)">
+      <source srcset="assets/images/hero--small-low-dpi.png 980w, assets/images/hero--small-hi-dpi.png 1960w" media="(min-width: 640px)">
+      <img srcset="assets/images/hero--smallest-low-dpi.png 640w, assets/images/hero--smallest-hi-dpi.png 1280w" alt="White BMW Car" class="hero__image">
     </picture>
 
     <div class="hero__form-container">
@@ -94,8 +94,8 @@
         <div class="deals__content">
           <div class="card">
             <picture>
-              <source sizes="(min-width: 992px) 685px" srcset="assets/images/blue--large-low-dpi-o.png 685w, assets/images/blue--large-hi-dpi-o.png 1370w" media="(min-width: 400px)"> 
-              <img srcset="assets/images/blue--small-low-dpi-o.png 400w, assets/images/blue--small-hi-dpi-o.png 800w" alt="Blue Mercedes" class="card__image">
+              <source sizes="(min-width: 992px) 685px" srcset="assets/images/blue--large-low-dpi.png 685w, assets/images/blue--large-hi-dpi.png 1370w" media="(min-width: 400px)"> 
+              <img srcset="assets/images/blue--small-low-dpi.png 400w, assets/images/blue--small-hi-dpi.png 800w" alt="Blue Mercedes" class="card__image">
             </picture>
 
             <div class="card__text-content">
@@ -123,8 +123,8 @@
         <div class="deals__content">
           <div class="card card--img-right card--reduced-m-large">
             <picture>
-              <source sizes="(min-width: 992px) 685px" srcset="assets/images/red--large-low-dpi-o.png 685w, assets/images/red--large-hi-dpi-o.png 1370w" media="(min-width: 400px)"> 
-              <img srcset="assets/images/red--small-low-dpi-o.png 400w, assets/images/red--small-hi-dpi-o.png 800w" alt="Red sports car" class="card__image">
+              <source sizes="(min-width: 992px) 685px" srcset="assets/images/red--large-low-dpi.png 685w, assets/images/red--large-hi-dpi.png 1370w" media="(min-width: 400px)"> 
+              <img srcset="assets/images/red--small-low-dpi.png 400w, assets/images/red--small-hi-dpi.png 800w" alt="Red sports car" class="card__image">
             </picture>
 
             <div class="card__text-content">
