Completed mobile menu

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,9 @@
         <h1 class="site-header__company-name">Rent<span>Car</span></h1>
       </div>
 
-      <div class="site-header__hamburger"></div>
+      <div class="site-header__hamburger">
+        <div class="site-header__hamburger__middle"></div>
+      </div>
 
       <nav class="site-header__menu">
         <ul>
