--- a/app/index.html
+++ b/app/index.html
@@ -96,8 +96,8 @@
         <div class="deals__content">
           <div class="card">
             <picture>
-              <source sizes="(min-width: 992px) 685px" srcset="assets/images/blue--large-low-dpi.png 685w, assets/images/blue--large-hi-dpi.png 1370w" media="(min-width: 400px)"> 
-              <img srcset="assets/images/blue--small-low-dpi.png 400w, assets/images/blue--small-hi-dpi.png 800w" alt="Blue Mercedes" class="card__image">
+              <source data-sizes="(min-width: 992px) 685px" srcset="assets/images/blue--large-low-dpi.png 685w, assets/images/blue--large-hi-dpi.png 1370w" media="(min-width: 400px)"> 
+              <img data-srcset="assets/images/blue--small-low-dpi.png 400w, assets/images/blue--small-hi-dpi.png 800w" alt="Blue Mercedes" class="card__image lazyload">
             </picture>
 
             <div class="card__text-content">
@@ -125,8 +125,8 @@
         <div class="deals__content">
           <div class="card card--img-right card--reduced-m-large">
             <picture>
-              <source sizes="(min-width: 992px) 685px" srcset="assets/images/red--large-low-dpi.png 685w, assets/images/red--large-hi-dpi.png 1370w" media="(min-width: 400px)"> 
-              <img srcset="assets/images/red--small-low-dpi.png 400w, assets/images/red--small-hi-dpi.png 800w" alt="Red sports car" class="card__image">
+              <source data-sizes="(min-width: 992px) 685px" srcset="assets/images/red--large-low-dpi.png 685w, assets/images/red--large-hi-dpi.png 1370w" media="(min-width: 400px)"> 
+              <img data-srcset="assets/images/red--small-low-dpi.png 400w, assets/images/red--small-hi-dpi.png 800w" alt="Red sports car" class="card__image lazyload">
             </picture>
 
             <div class="card__text-content">
